refactor: migrate from servlet-based controllers to MVC pattern with API integration
- Remove compiled .class files and legacy servlet/controller classes
- Add new servlets for service categories, details, and search functionality
- Update ServiceAPI to integrate with external Spring Boot REST API
- Simplify JSP imports and remove redundant type casting
- Update Java version from 17 to 21 in project configuration